# ogata_balancer_psel

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
frontend/: index.html
frontend/assets/: style.css
load_balancer/: Cargo.toml  Dockerfile
load_balancer/src/: health.rs  main.rs  proxy.rs  router.rs  scheduler.rs
scripts/: generate-certs.sh  seed-files.sh
server/: Cargo.toml  Dockerfile
server/src/: handler.rs  health.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs  parser.rs  protocol.rs  tls.rs
